# ExpenseCracker

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Docs/source/: DymanicStructure.rst  conf.py  index.rst
data/: Expense Tracker.xlsx  expense_tracker.db
inc/: dtypes.h  ec_db.h  ec_queries.h
src/: dtypes.c  ec_db.c  main.c
